Name:                   fp-haskell
Version:                0.0.0
Author:                 reborg <reborg@reborg.net>
Maintainer:             reborg <reborg@reborg.net>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Fp.Haskell
                        Fp.InfiniteStream
  Other-Modules:        Fp.Haskell.Internal
  Build-Depends:        base >= 4 && < 5
                      , memoize
                      , random

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , memoize
                      , random

Source-Repository head
  Type:                 git
--  Location:
